tests/macros/input/extension.rs
fn main() {
    let q = requestty::questions![Input { extension: todo!() }];
}
